# osh-oxy

./: .gitignore  Cargo.toml  flake.nix  notes  readme.md
.github/: codecov.yml  dependabot.yml
.github/workflows/: check.yml  rust.yml
benches/: load.rs  sorting.rs
shells/: zsh
src/: async_binary_writer.rs  commands.rs  event.rs  formats.rs  json_lines.rs  lib.rs  main.rs  matcher.rs  ui.rs
src/commands/: append_event.rs  cat.rs  convert.rs  search.rs  sk.rs  tui.rs
src/formats/: json_lines.rs  rmp.rs
tests/: local.osh
