[package]
name = "osh-oxy"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.68"
arbitrary = { version = "1", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.0.32", features = ["derive"] }
fuzzy-matcher = "0.3.7"
glob = "0.3.1"
itertools = "0.14"
home = "0.5.5"
rmp-serde = "*"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
timeago = "0.4.2"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
crossbeam-channel = "0.5"
rayon = "1.11.0"
libc = "0.2.178"

[dev-dependencies]
criterion = { version = "0.6" }
tempfile = "*"

[profile.release]
lto = "fat"
panic = "abort"
# debug = true

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"

[[bench]]
name = "load"
path = "benches/load.rs"
harness = false

[[bench]]
name = "sort"
path = "benches/sorting.rs"
harness = false
