[package]
name = "osh-oxy"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arbitrary = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
fuzzy-matcher = "0.3"
nom = "8.0"
glob = "0.3"
itertools = "0.14"
home = "0.5"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
timeago = "0.6"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["use-dev-tty"] }
crossbeam-channel = "0.5"
rayon = "1.12"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.8" }
tempfile = "3.27"

[profile.release]
lto = "fat"
panic = "abort"
# debug = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# restriction = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
blanket_clippy_restriction_lints = "allow"

[[bench]]
name = "load"
path = "benches/load.rs"
harness = false

[[bench]]
name = "sort"
path = "benches/sorting.rs"
harness = false
